--- a/style.css
+++ b/style.css
@@ -50,14 +50,20 @@
 }
 
 .preview {
+    height: 50%;
     text-align: end;
     font-size: 1.4rem;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .result {
+    height: 50%;
     text-align: end;
     font-size: 2rem;
     font-weight: bolder;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 /* Features */
@@ -78,6 +84,7 @@
     color: #000;
     font-size: 1.1rem;
     cursor: pointer;
+    transition: all .2s ease-in-out;
 }
 
 #clear {
@@ -86,6 +93,10 @@
 
 #delete {
     background-color: rgb(0, 0, 255, 0.6);
+}
+
+#clear:hover, #delete:hover {
+    filter: brightness(80%);
 }
 
 /* Keys */
@@ -108,6 +119,11 @@
     cursor: pointer;
     color: #000;
     border: 2px solid #000;
+    transition: all 0.2s ease-in-out;
+}
+
+.key:hover {
+    filter: brightness(80%);
 }
 
 /* Footer */
